--- a/app/entrypoints/tests/config/stack.yaml
+++ b/app/entrypoints/tests/config/stack.yaml
@@ -1,14 +1,14 @@
 newyeti-test:
   redis:
-    client_id: ${oc.env:NEWYETI0_CLIENT_ID}-redis
-    host: ${oc.env:NEWYETI0_REDIS_HOST}
-    port: ${oc.env:NEWYETI0_REDIS_PORT}
-    password: ${oc.env:NEWYETI0_REDIS_PASSWORD}
+    client_id: ${oc.env:NEWYETI_TEST_CLIENT_ID}-redis
+    host: ${oc.env:NEWYETI_TEST_REDIS_HOST}
+    port: ${oc.env:NEWYETI_TEST_REDIS_PORT}
+    password: ${oc.env:NEWYETI_TEST_REDIS_PASSWORD}
   kafka: 
     bootstrap_servers: 
-      - ${oc.env:NEWYETI0_KAFKA_BOOTSTRAP_SERVERS}
-    client_id: ${oc.env:NEWYETI0_CLIENT_ID}-kafka
+      - ${oc.env:NEWYETI_TEST_KAFKA_BOOTSTRAP_SERVERS}
+    client_id: ${oc.env:NEWYETI_TEST_CLIENT_ID}-kafka
     sasl_mechanism: SCRAM-SHA-256
     security_protocol: SASL_SSL
-    sasl_plain_username: ${oc.env:NEWYETI0_KAFKA_USERNAME}
-    sasl_plain_password: ${oc.env:NEWYETI0_KAFKA_PASSWORD}
+    sasl_plain_username: ${oc.env:NEWYETI_TEST_KAFKA_USERNAME}
+    sasl_plain_password: ${oc.env:NEWYETI_TEST_KAFKA_PASSWORD}
